fix queries
